--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "ay4t/php-commit-generator",
     "type": "library",
     "require": {
-        "lucianotonet/groq-php": "dev-main"
+        "lucianotonet/groq-php": "dev-main",
+        "vlucas/phpdotenv": "^5.6@dev"
     },
     "require-dev": {
         "phpunit/phpunit": "^12.0@dev"
